fixing rating spacing on preview tiles

--- a/react-app/src/components/ProductPreview/ProductPreview.css
+++ b/react-app/src/components/ProductPreview/ProductPreview.css
@@ -3,7 +3,6 @@
     height: 310px;
     margin: 30px;
     border: 1px solid black;
-    /* padding: 3px; */
     border-radius: 3px;
 }
 
@@ -28,12 +27,17 @@
 }
 
 .product-preview-rating {
-    width: 400px;
-    text-align: end;
+    width: 380px;
+    display: flex;
+    justify-content: flex-end;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     position: relative;
     bottom: 20px;
-    /* padding-left: 5px; */
+    padding-right: 20px;
     /* -webkit-text-stroke: 1px black; */
+}
+
+.product-preview-rating-text {
+    width: 100px;
 }
